<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="64dp"
	android:layout_margin="0dp"
	android:padding="0dp">

	<ImageView
		android:id="@+id/contact_item_image"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentTop="true"
		android:layout_margin="8dp"
		android:contentDescription="@string/contact_image_desc"
		android:padding="0dp"
		android:src="@android:drawable/presence_online" />

	<TextView
		android:id="@+id/contact_item_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentTop="true"
		android:layout_margin="5dp"
		android:layout_toEndOf="@+id/contact_item_image"
		android:padding="0dp"
		android:text="@string/contact_item_name_text"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/contact_item_phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/contact_item_name"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_toEndOf="@+id/contact_item_image"
		android:padding="0dp"
		android:text="@string/contact_item_phone_text" />
</RelativeLayout>