<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ksa.locationtube.SettingsActivity">

    <EditText
        android:id="@+id/editTextMyLocationAccuracy"
        android:layout_width="375dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyLocationAccuracy"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextLocationsRefreshInterval"
        android:layout_width="375dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationsRefreshInterval"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="374dp"
        android:layout_height="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="374dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Settings"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="374dp"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewURL"/>

    <TextView
        android:id="@+id/textViewURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextURL"
        android:text="@string/url"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextPhone"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextURL"/>

    <TextView
        android:id="@+id/textViewMyLocationsRefreshInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextMyLocatinRefreshInterval"
        android:text="@string/my_location_refresh_interval_s"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"/>

    <TextView
        android:id="@+id/textViewLocationsRefreshInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextLocationsRefreshInterval"
        android:text="@string/locations_refresh_interval_s"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMyLocatinRefreshInterval"/>

    <TextView
        android:id="@+id/textViewMyLocationAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextMyLocationAccuracy"
        android:text="@string/my_location_accuracy_m"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocationsRefreshInterval"/>

    <EditText
        android:id="@+id/editTextMyLocatinRefreshInterval"
        android:layout_width="375dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyLocationsRefreshInterval"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="22dp"
        android:onClick="saveSettings"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMyLocationAccuracy"/>
</android.support.constraint.ConstraintLayout>
